--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -620,11 +620,11 @@
                 <script>
                   var image = document.getElementById("image_1");
 
-                  image.addEventListener("mouseover1", function() {
+                  image.addEventListener("mouseover", function() {
                     image.src = "assets/img/team/team-1.jpg";
                   });
 
-                  image.addEventListener("mouseout1", function() {
+                  image.addEventListener("mouseout", function() {
                     image.src = "assets/img/team/team-1.png";
                   });
                 </script>
@@ -647,14 +647,14 @@
               <div class="member-img">
                 <img src="assets/img/team/team-2.png" id="image_2" class="img-fluid" alt="">
                 <script>
-                  var image = document.getElementById("image_2");
+                  var image2 = document.getElementById("image_2");
 
-                  image.addEventListener("mouseover2", function() {
-                    image.src = "assets/img/team/team-2.jpg";
+                  image.addEventListener("mouseover", function() {
+                    image2.src = "assets/img/team/team-2.jpg";
                   });
 
-                  image.addEventListener("mouseout2", function() {
-                    image.src = "assets/img/team/team-2.png";
+                  image.addEventListener("mouseout", function() {
+                    image2.src = "assets/img/team/team-2.png";
                   });
                 </script>
                 <div class="social">
@@ -676,14 +676,14 @@
               <div class="member-img">
                 <img src="assets/img/team/team-3.png" id="image_3" class="img-fluid" alt="">
                 <script>
-                  var image = document.getElementById("image_3");
+                  var image3 = document.getElementById("image_3");
 
-                  image.addEventListener("mouseover3", function() {
-                    image.src = "assets/img/team/team-3.jpg";
+                  image.addEventListener("mouseover", function() {
+                    image3.src = "assets/img/team/team-3.jpg";
                   });
 
-                  image.addEventListener("mouseout3", function() {
-                    image.src = "assets/img/team/team-3.png";
+                  image.addEventListener("mouseout", function() {
+                    image3.src = "assets/img/team/team-3.png";
                   });
                 </script>
                 <div class="social">
@@ -705,14 +705,14 @@
               <div class="member-img">
                 <img src="assets/img/team/team-2.png" id="image_4" class="img-fluid" alt="">
                 <script>
-                  var image = document.getElementById("image_4");
+                  var image4 = document.getElementById("image_4");
 
-                  image.addEventListener("mouseover4", function() {
-                    image.src = "assets/img/team/team-4.jpg";
+                  image.addEventListener("mouseover", function() {
+                    image4.src = "assets/img/team/team-4.jpg";
                   });
 
-                  image.addEventListener("mouseout4", function() {
-                    image.src = "assets/img/team/team-4.png";
+                  image.addEventListener("mouseout", function() {
+                    image4.src = "assets/img/team/team-4.png";
                   });
                 </script>
                 <div class="social">
