--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -34,6 +34,13 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+  <style>
+    #image_2 {
+      width: 300px;
+      height: 300px;
+      transition: all 0.3s ease-in-out;
+    }
+  </style>  
 </head>
 
 <body>
@@ -649,11 +656,11 @@
                 <script>
                   var image2 = document.getElementById("image_2");
 
-                  image.addEventListener("mouseover", function() {
+                  image2.addEventListener("mouseover", function() {
                     image2.src = "assets/img/team/team-2.jpg";
                   });
 
-                  image.addEventListener("mouseout", function() {
+                  image2.addEventListener("mouseout", function() {
                     image2.src = "assets/img/team/team-2.png";
                   });
                 </script>
@@ -678,11 +685,11 @@
                 <script>
                   var image3 = document.getElementById("image_3");
 
-                  image.addEventListener("mouseover", function() {
+                  image3.addEventListener("mouseover", function() {
                     image3.src = "assets/img/team/team-3.jpg";
                   });
 
-                  image.addEventListener("mouseout", function() {
+                  image3.addEventListener("mouseout", function() {
                     image3.src = "assets/img/team/team-3.png";
                   });
                 </script>
@@ -707,11 +714,11 @@
                 <script>
                   var image4 = document.getElementById("image_4");
 
-                  image.addEventListener("mouseover", function() {
+                  image4.addEventListener("mouseover", function() {
                     image4.src = "assets/img/team/team-4.jpg";
                   });
 
-                  image.addEventListener("mouseout", function() {
+                  image4.addEventListener("mouseout", function() {
                     image4.src = "assets/img/team/team-4.png";
                   });
                 </script>
