--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -38,7 +38,11 @@
     #image_2 {
       width: 300px;
       height: 300px;
-      transition: all 1.3s ease-in-out;
+      transition: transform 0.3s ease-in-out;
+    }
+
+    .image-flip {
+      transform: scaleX(-1);
     }
   </style>
 </head>
