--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -34,17 +34,7 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
-  <style>
-    #image_2 {
-      width: 300px;
-      height: 300px;
-      transition: transform 0.3s ease-in-out;
-    }
 
-    .image-flip {
-      transform: scaleX(-1);
-    }
-  </style>
 </head>
 
 <body>
@@ -656,15 +646,15 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
-                <img src="assets/img/team/team-2.png" id="image_2" class="img-fluid" alt="">
+                <img src="assets/img/team/team-2.png" id="image_2a" class="img-fluid" alt="">
                 <script>
-                  var image2 = document.getElementById("image_2");
+                  var image_2a = document.getElementById("image_2a");
 
-                  image2.addEventListener("mouseover", function() {
+                  image_2a.addEventListener("mouseover", function() {
                     image2.src = "assets/img/team/team-2.jpg";
                   });
 
-                  image2.addEventListener("mouseout", function() {
+                  image_2a.addEventListener("mouseout", function() {
                     image2.src = "assets/img/team/team-2.png";
                   });
                 </script>
