--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -655,7 +655,7 @@
                   });
 
                   image_2a.addEventListener("mouseout", function() {
-                    image2.src = "assets/img/team/team-2.png";
+                    image_2a.src = "assets/img/team/team-2.png";
                   });
                 </script>
                 <div class="social">
