--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -651,7 +651,7 @@
                   var image_2a = document.getElementById("image_2a");
 
                   image_2a.addEventListener("mouseover", function() {
-                    image2.src = "assets/img/team/team-2.jpg";
+                    image_2a.src = "assets/img/team/team-2.jpg";
                   });
 
                   image_2a.addEventListener("mouseout", function() {
