--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -617,16 +617,16 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <img src="assets/img/team/team-1.png" id="image_1" class="img-fluid" alt="">
+                <img src="assets/img/team/team-1.jpg" id="image_1" class="img-fluid" alt="">
                 <script>
                   var image = document.getElementById("image_1");
 
                   image.addEventListener("mouseover", function() {
-                    image.src = "assets/img/team/team-1.jpg";
+                    image.src = "assets/img/team/team-1.png";
                   });
 
                   image.addEventListener("mouseout", function() {
-                    image.src = "assets/img/team/team-1.png";
+                    image.src = "assets/img/team/team-1.jpg";
                   });
                 </script>
                 <div class="social">
@@ -646,16 +646,16 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
-                <img src="assets/img/team/team-2.png" id="image_2a" class="img-fluid" alt="">
+                <img src="assets/img/team/team-2.jpg" id="image_2a" class="img-fluid" alt="">
                 <script>
                   var image_2a = document.getElementById("image_2a");
 
                   image_2a.addEventListener("mouseover", function() {
-                    image_2a.src = "assets/img/team/team-2.jpg";
+                    image_2a.src = "assets/img/team/team-2.png";
                   });
 
                   image_2a.addEventListener("mouseout", function() {
-                    image_2a.src = "assets/img/team/team-2.png";
+                    image_2a.src = "assets/img/team/team-2.jpg";
                   });
                 </script>
                 <div class="social">
@@ -675,16 +675,16 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src="assets/img/team/team-3.png" id="image_3" class="img-fluid" alt="">
+                <img src="assets/img/team/team-3.jpg" id="image_3" class="img-fluid" alt="">
                 <script>
                   var image3 = document.getElementById("image_3");
 
                   image3.addEventListener("mouseover", function() {
-                    image3.src = "assets/img/team/team-3.jpg";
+                    image3.src = "assets/img/team/team-3.png";
                   });
 
                   image3.addEventListener("mouseout", function() {
-                    image3.src = "assets/img/team/team-3.png";
+                    image3.src = "assets/img/team/team-3.jpg";
                   });
                 </script>
                 <div class="social">
@@ -704,16 +704,16 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
-                <img src="assets/img/team/team-2.png" id="image_4" class="img-fluid" alt="">
+                <img src="assets/img/team/team-2.jpg" id="image_4" class="img-fluid" alt="">
                 <script>
                   var image4 = document.getElementById("image_4");
 
                   image4.addEventListener("mouseover", function() {
-                    image4.src = "assets/img/team/team-4.jpg";
+                    image4.src = "assets/img/team/team-4.png";
                   });
 
                   image4.addEventListener("mouseout", function() {
-                    image4.src = "assets/img/team/team-4.png";
+                    image4.src = "assets/img/team/team-4.jpg";
                   });
                 </script>
                 <div class="social">
