--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -34,6 +34,13 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+  <script>
+    function subscribe(event) {
+      event.preventDefault(); // Cancel the default form submission behavior
+      // Add your custom code here
+      // ...
+    }
+  </script>
 
 
 </head>
@@ -861,8 +868,8 @@
             <h4>Our Newsletter</h4>
             <p>Stay up-to-date on the latest news and offers from California Solar Group by joining our newsletter. Simply enter your email address below and click "Subscribe" to start receiving regular updates from us.</p>
             </p>
-            <form action="" method="post" name="subscribe" id="subscribe" >
-              <input type="email" name="email"><input type="submit" value="Subscribe">
+            <form action="#" method="post" name="subscribe" id="subscribe" >
+              <input type="email" name="email"><input type="submit" value="Subscribe" onclick="subscribe(event)">
             </form>
             <div id="success" ></div>
           </div>
