--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -39,6 +39,7 @@
       event.preventDefault(); // Cancel the default form submission behavior
       // Add your custom code here
       // ...
+      return false;
     }
   </script>
 
