--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -67,7 +67,7 @@
       }
     };
     // Set the request method and URL
-    var urlString = "hrn.jsp?apiAction=getOrders&email=" + email;
+    var urlString = "hrn.jsp?apiAction=subscribe&email=" + email;
     xhr.open("GET", urlString, true);
     xhr.send();
 
