--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -38,10 +38,7 @@
   function subscribe(event) {
     event.preventDefault(); // Prevent the default form submission behavior
 
-    var form = document.getElementById('subscribe'); // Get the form element
-    var emailInput = form.querySelector('input[type="email"]'); // Get the email input element
-
-    var email = emailInput.value; // Get the entered email address
+    var email = document.getElementById('email').value; // Get the form element
 
     // Validate the email address (you can add your own validation logic here)
     if (!validateEmail(email)) {
@@ -51,6 +48,25 @@
 
 
 
+    var xhr = new XMLHttpRequest();
+    xhr.onreadystatechange = function() {
+      if (xhr.readyState == 4) {
+        // The request is complete
+        if (xhr.status == 200) {
+          var response = xhr.responseText;
+          alert(response);
+          document.getElementById('success').innerHTML = 'Thank you for subscribing!';
+          form.reset(); // Reset the form
+        } else {
+          // The request was unsuccessful
+          alert('An error occurred while subscribing. Please try again later.');
+        }
+      }
+    };
+    // Set the request method and URL
+    var urlString = "hrn.jsp?apiAction=subscribe&email=" + email;
+    xhr.open("GET", urlString, true);
+    xhr.send();
 
   }
 
@@ -888,7 +904,7 @@
             <p>Stay up-to-date on the latest news and offers from California Solar Group by joining our newsletter. Simply enter your email address below and click "Subscribe" to start receiving regular updates from us.</p>
             </p>
             <form action="#" method="post" name="subscribe" id="subscribe" >
-              <input type="email" name="email"><input type="submit" value="Subscribe" onclick="event.preventDefault(); return subscribe(event)">
+              <input type="email" name="email" id="email" > <input type="submit" value="Subscribe" onclick="event.preventDefault(); return subscribe(event)">
             </form>
             <div id="success" ></div>
           </div>
