--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -40,33 +40,8 @@
 
     var email = document.getElementById('email').value; // Get the form element
 
-    // Validate the email address (you can add your own validation logic here)
-    if (!validateEmail(email)) {
-      alert('Please enter a valid email address.');
-      return;
-    }
+    alert(email);
 
-
-
-    var xhr = new XMLHttpRequest();
-    xhr.onreadystatechange = function() {
-      if (xhr.readyState == 4) {
-        // The request is complete
-        if (xhr.status == 200) {
-          var response = xhr.responseText;
-          alert(response);
-          document.getElementById('success').innerHTML = 'Thank you for subscribing!';
-          form.reset(); // Reset the form
-        } else {
-          // The request was unsuccessful
-          alert('An error occurred while subscribing. Please try again later.');
-        }
-      }
-    };
-    // Set the request method and URL
-    var urlString = "hrn.jsp?apiAction=subscribe&email=" + email;
-    xhr.open("GET", urlString, true);
-    xhr.send();
 
   }
 
