--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -872,8 +872,9 @@
             <p>Stay up-to-date on the latest news and offers from California Solar Group by joining our newsletter. Simply enter your email address below and click "Subscribe" to start receiving regular updates from us.</p>
             </p>
             <form action="#subscribe" method="post" name="subscribe" id="subscribe" >
-              <input type="email" name="email" id="email" > <input type="submit" value="Subscribe" onclick="subscribe(event)">
+              <input type="email" name="email" id="email" >
             </form>
+            <input type="submit" value="Subscribe" onclick="subscribe(event)">
             <div id="success" ></div>
           </div>
         </div>
