--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -36,7 +36,7 @@
   ======================================================== -->
   <script>
   function subscribe() {
-    alert(email);
+    alert('email');
   }
 
   </script>
