--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -35,10 +35,9 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
   <script>
-  function subscribe() {
-    alert('email');
-  }
-
+      function getsubscribe() {
+        alert('email');
+      }
   </script>
 
 
@@ -869,7 +868,7 @@
             <form action="#subscribe" method="post" name="subscribe" id="subscribe" >
               <input type="email" name="email" id="email" >
             </form>
-            <input type="submit" value="Subscribe" onclick="subscribe()">
+            <input type="submit" value="Subscribe" onclick="getsubscribe()">
             <div id="success" ></div>
           </div>
         </div>
