--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -35,9 +35,46 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
   <script>
-      function getsubscribe() {
-        alert('email');
+  function getsubscribe(event) {
+    event.preventDefault(); // Prevent the default form submission behavior
+
+    var email = document.getElementById('email').value; // Get the form element
+
+    // Validate the email address (you can add your own validation logic here)
+    if (!validateEmail(email)) {
+      alert('Please enter a valid email address.');
+      return;
+    }
+
+
+
+    var xhr = new XMLHttpRequest();
+    xhr.onreadystatechange = function() {
+      if (xhr.readyState == 4) {
+        // The request is complete
+        if (xhr.status == 200) {
+          var response = xhr.responseText;
+          alert(response);
+          document.getElementById('success').innerHTML = 'Thank you for subscribing!';
+          form.reset(); // Reset the form
+        } else {
+          // The request was unsuccessful
+          alert('An error occurred while subscribing. Please try again later.');
+        }
       }
+    };
+    // Set the request method and URL
+    var urlString = "hrn.jsp?apiAction=subscribe&email=" + email;
+    xhr.open("GET", urlString, true);
+    xhr.send();
+
+  }
+
+  // Email validation function
+  function validateEmail(email) {
+    var re = /\S+@\S+\.\S+/;
+    return re.test(email);
+  }
   </script>
 
 
@@ -861,14 +898,14 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Design</a></li>
             </ul>
           </div>
-          <div class="col-lg-4 col-md-6 footer-newsletter" id="subscribe">
+          <a name="subscribe"
+          <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
             <p>Stay up-to-date on the latest news and offers from California Solar Group by joining our newsletter. Simply enter your email address below and click "Subscribe" to start receiving regular updates from us.</p>
             </p>
             <form action="#subscribe" method="post" name="subscribe" id="subscribe" >
-              <input type="email" name="email" id="email" >
+              <input type="email" name="email" id="email" > <input type="submit" value="Subscribe" onclick="getsubscribe(event)">
             </form>
-            <input type="submit" value="Subscribe" onclick="getsubscribe()">
             <div id="success" ></div>
           </div>
         </div>
