--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -38,8 +38,8 @@
   function getsubscribe(event) {
     event.preventDefault(); // Prevent the default form submission behavior
 
-    var email = document.getElementById('email').value; // Get the form element
-
+    var email = document.getElementById('emailsub').value; // Get the form element
+    alert(email)
     // Validate the email address (you can add your own validation logic here)
     if (!validateEmail(email)) {
       alert('Please enter a valid email address.');
@@ -904,7 +904,7 @@
             <p>Stay up-to-date on the latest news and offers from California Solar Group by joining our newsletter. Simply enter your email address below and click "Subscribe" to start receiving regular updates from us.</p>
             </p>
             <form action="#subscribe" method="post" name="subscribe" id="subscribe" >
-              <input type="email" name="email" id="email" > <input type="submit" value="Subscribe" onclick="getsubscribe(event)">
+              <input type="email" name="emailsub" id="emailsub" > <input type="submit" value="Subscribe" onclick="getsubscribe(event)">
             </form>
             <div id="success" ></div>
           </div>
