--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -37,7 +37,7 @@
   <script>
   function getsubscribe(event) {
     event.preventDefault(); // Prevent the default form submission behavior
-
+    var form = document.getElementById('subscribeform');
     var email = document.getElementById('emailsub').value; // Get the form element
     alert(email)
     // Validate the email address (you can add your own validation logic here)
@@ -903,9 +903,10 @@
             <h4>Our Newsletter</h4>
             <p>Stay up-to-date on the latest news and offers from California Solar Group by joining our newsletter. Simply enter your email address below and click "Subscribe" to start receiving regular updates from us.</p>
             </p>
-            <form action="#subscribe" method="post" name="subscribe" id="subscribe" >
+            <form action="#subscribe" method="post" name="subscribeform" id="subscribeform" >
               <input type="email" name="emailsub" id="emailsub" > <input type="submit" value="Subscribe" onclick="getsubscribe(event)">
             </form>
+            <hr>
             <div id="success" ></div>
           </div>
         </div>
