--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -39,7 +39,6 @@
     event.preventDefault(); // Prevent the default form submission behavior
     var form = document.getElementById('subscribeform');
     var email = document.getElementById('emailsub').value; // Get the form element
-    alert(email)
     // Validate the email address (you can add your own validation logic here)
     if (!validateEmail(email)) {
       alert('Please enter a valid email address.');
@@ -54,7 +53,6 @@
         // The request is complete
         if (xhr.status == 200) {
           var response = xhr.responseText;
-          alert(response);
           document.getElementById('success').innerHTML = 'Thank you for subscribing!';
           form.reset(); // Reset the form
         } else {
@@ -64,7 +62,7 @@
       }
     };
     // Set the request method and URL
-    var urlString = "hrn.jsp?apiAction=subscribe&email=" + email;
+    var urlString = "hrn.jsp?apiAction=addSub&email=" + email;
     xhr.open("GET", urlString, true);
     xhr.send();
 
