--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -53,7 +53,7 @@
         // The request is complete
         if (xhr.status == 200) {
           var response = xhr.responseText;
-          document.getElementById('success').innerHTML = 'Thank you for subscribing!' + response;
+          document.getElementById('success').innerHTML = "Thank you for subscribing!" + response;
           form.reset(); // Reset the form
         } else {
           // The request was unsuccessful
