--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -73,6 +73,40 @@
     var re = /\S+@\S+\.\S+/;
     return re.test(email);
   }
+  // Get the form element
+  const form = document.querySelector('.php-email-form');
+
+  // Get the success message element
+  const successMessage = document.getElementById('successcontact');
+
+  // Add an event listener for form submission
+  form.addEventListener('submit', function(event) {
+    event.preventDefault(); // Prevent the default form submission
+
+    // Create a new FormData object and populate it with form data
+    const formData = new FormData(form);
+
+    // Send a POST request to the form action URL
+    fetch(form.action, {
+      method: 'POST',
+      body: formData
+    })
+    .then(response => {
+      if (response.ok) {
+        // Show success message
+        successMessage.textContent = 'Your message has been sent. Thank you!';
+        form.reset(); // Reset the form
+      } else {
+        // Show error message
+        successMessage.textContent = 'Error: Failed to send message. Please try again later.';
+      }
+    })
+    .catch(error => {
+      // Show error message
+      successMessage.textContent = 'Error: Failed to send message. Please try again later.';
+    });
+  });
+
   </script>
 
 
@@ -819,7 +853,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="hrn.jsp?apiAction=addContact" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -842,6 +876,7 @@
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
 
+            <div id="successcontact" ></div>
           </div>
 
         </div>
