--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -852,38 +852,41 @@
       </div>
     </section><!-- End Contact Section -->
     <script>
-      document.getElementById("contactform").addEventListener("submit", function(event) {
-        event.preventDefault(); // Prevent form submission
+    document.getElementById("contactform").addEventListener("submit", function(event) {
+      event.preventDefault(); // Prevent form submission
 
-        // Display the loading message
-        document.querySelector(".loading").style.display = "block";
-        document.querySelector(".error-message").style.display = "none";
-        document.querySelector(".sent-message").style.display = "none";
+      // Display the loading message
+      document.querySelector(".loading").style.display = "block";
+      document.querySelector(".error-message").style.display = "none";
+      document.querySelector(".sent-message").style.display = "none";
 
-        // Perform an AJAX request to submit the form data
-        var xhr = new XMLHttpRequest();
-        xhr.open("POST", this.action, true);
-        xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
-        xhr.onreadystatechange = function() {
-          if (xhr.readyState === XMLHttpRequest.DONE) {
-            // Hide the loading message
-            document.querySelector(".loading").style.display = "none";
+      // Perform an AJAX request to submit the form data
+      var xhr = new XMLHttpRequest();
+      xhr.open("POST", this.action, true);
+      xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+      xhr.onreadystatechange = function() {
+        if (xhr.readyState === XMLHttpRequest.DONE) {
+          // Hide the loading message
+          document.querySelector(".loading").style.display = "none";
 
-            if (xhr.status === 200) {
-              // Show the success message
-              document.querySelector(".sent-message").style.display = "block";
-              document.getElementById("successcontact").textContent = "Your message has been sent. Thank you!";
-              // You can optionally reset the form here
-              // document.getElementById("contactform").reset();
-            } else {
-              // Show an error message
-              document.querySelector(".error-message").style.display = "block";
-              document.getElementById("successcontact").textContent = "An error occurred. Please try again.";
-            }
+          if (xhr.status === 200) {
+            // Show the success message
+            document.querySelector(".sent-message").style.display = "block";
+            document.querySelector(".error-message").style.display = "none";
+            document.getElementById("successcontact").textContent = "Your message has been sent. Thank you!";
+            // You can optionally reset the form here
+            // document.getElementById("contactform").reset();
+          } else {
+            // Show the error message
+            document.querySelector(".error-message").style.display = "block";
+            document.querySelector(".sent-message").style.display = "none";
+            document.getElementById("successcontact").textContent = "An error occurred. Please try again.";
           }
-        };
-        xhr.send(new FormData(this));
-      });
+        }
+      };
+      xhr.send(new FormData(this));
+    });
+
     </script>
   </main><!-- End #main -->
 
