--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -843,6 +843,10 @@
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
+            <div class="my-3">
+              <div class="loading">Loading</div>
+              <div class="status-message"></div>
+            </div>
 
             <div id="successcontact" ></div>
           </div>
@@ -871,6 +875,7 @@
 
           if (xhr.status === 200) {
             // Show the success message
+
             document.querySelector(".sent-message").style.display = "block";
             document.querySelector(".error-message").style.display = "none";
             document.getElementById("successcontact").textContent = "Your message has been sent. Thank you!";
