--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -844,16 +844,9 @@
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
 
-                <div class="loading">Loading...</div>
-                <div class="error-message">Error occurred!</div>
-                <div class="sent-message">Message sent successfully!</div>
-                <script>
-                    <script>
-                        document.querySelector(".loading").style.display = "none";
-                        document.querySelector(".error-message").style.display = "none";
-                        document.querySelector(".sent-message").style.display = "none";
-                    </script>
-                </script>
+            <div class="loading">Loading...</div>
+            <div class="error-message">Error message goes here</div>
+            <div class="sent-message">Success message goes here</div>
                 <div id="successcontact" ></div>
           </div>
 
