--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -844,10 +844,10 @@
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
 
-            <div class="loading">Loading...</div>
-            <div class="error-message">Error message goes here</div>
-            <div class="sent-message">Success message goes here</div>
-                <div id="successcontact" ></div>
+            <div class="loading" style="display: none;">Loading...</div>
+            <div class="error-message" style="display: none;">Error message goes here</div>
+            <div class="sent-message" style="display: none;">Success message goes here</div>
+            <div id="successcontact"></div>
           </div>
 
         </div>
