--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -858,6 +858,9 @@
         document.querySelector(".error-message").style.display = "none";
         document.querySelector(".sent-message").style.display = "none";
 
+        // Serialize the form data
+        var formData = new URLSearchParams(new FormData(this)).toString();
+
         // Perform an AJAX request to submit the form data
         var xhr = new XMLHttpRequest();
         xhr.open("POST", this.action, true);
@@ -866,7 +869,7 @@
           if (xhr.readyState === XMLHttpRequest.DONE) {
             // Hide the loading message
             document.querySelector(".loading").style.display = "none";
-            alert(xhr.responseText + "test");
+
             if (xhr.status === 200) {
               // Show the success message
               document.querySelector(".sent-message").style.display = "block";
@@ -882,9 +885,10 @@
             }
           }
         };
-        xhr.send(new FormData(this));
+        xhr.send(formData);
       });
     </script>
+
 
   </main><!-- End #main -->
 
