--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -717,7 +717,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" id="image_3" class="img-fluid" alt="">
+                <img src="assets/img/team/team-3.png" id="image_3" class="img-fluid" alt="">
                 <script>
                   var image3 = document.getElementById("image_3");
 
@@ -726,7 +726,7 @@
                   });
 
                   image3.addEventListener("mouseout", function() {
-                    image3.src = "assets/img/team/team-3.jpg";
+                    image3.src = "assets/img/team/team-3.png";
                   });
                 </script>
                 <div class="social">
@@ -737,7 +737,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Lucy Arevyan</h4>
+                <h4>TBD</h4>
                 <span>Chief financial officer</span>
               </div>
             </div>
