--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -737,7 +737,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>TBD</h4>
+                <h4>To Be Determined (Hiring)</h4>
                 <span>Chief financial officer</span>
               </div>
             </div>
