--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -838,6 +838,9 @@
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
 
+              <div class="loading" style="display: none;">Loading...</div>
+              <div class="error-message" style="display: none;">Error</div>
+              <div class="sent-message" style="display: none;">Thank You</div>
               <div id="successcontact"></div>
             </form>
 
