--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -843,7 +843,7 @@
                           <div class="loading" style="display: none;">Loading...</div>
                           <div class="error-message" style="display: none;">Error</div>
                           <div class="sent-message" style="display: none;">Thank You</div>
-                          <div id="successcontact"></div>
+                          <div id="successcontact" class="alert alert-success" role="alert"></div>
           </div>
 
         </div>
