--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -843,7 +843,7 @@
                           <div class="loading" style="display: none;">Loading...</div>
                           <div class="error-message" style="display: none;">Error</div>
                           <div class="sent-message" style="display: none;">Thank You</div>
-                          <div id="successcontact" class="alert alert-success" role="alert"></div>
+                          <div id="successcontact" class="alert alert-success d-none" role="alert"></div>
           </div>
 
         </div>
@@ -876,6 +876,7 @@
               document.querySelector(".sent-message").style.display = "block";
               document.querySelector(".error-message").style.display = "none";
               document.getElementById("successcontact").textContent = xhr.responseText; // Display the response text
+              document.getElementById("successcontact").classList.remove("d-none"); // Make the element visible
               // You can optionally reset the form here
               document.getElementById("contactform").reset();
             } else {
